[workspace]
members = ["stringz", "stringz-macros", "structz-macros"]

[workspace.package]
authors = ["Nichts Hsu <NichtsVonChaos@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/NichtsHsu/structz"

[package]
name = "structz"
version = "0.2.1"
description = "Anonymous struct implementation in rust"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["struct", "named-arguments"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
tuplez = "0.8.2"
stringz = { version = "0.1.2", path = "stringz" }
structz-macros = { version = "0.1.0", path = "structz-macros" }
