[workspace]
members = ["stringz", "stringz-macros", "structz-macros"]

[workspace.package]
authors = ["Nichts Hsu <NichtsVonChaos@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/NichtsHsu/structz"

[package]
name = "structz"
version = "0.5.6-alpha"
description = "Anonymous struct implementation in rust"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
documentation = "https://docs.rs/structz"
keywords = ["struct", "anonymous", "named-tuple", "named-arguments", "no-std"]
categories = ["data-structures", "rust-patterns", "no-std", "no-std::no-alloc"]

[dependencies]
stringz = { version = "0.3.5-alpha", path = "stringz", default-features = false }
structz-macros = { version = "0.2.0-alpha", path = "structz-macros" }

[dev-dependencies]
tuplez = { version = "=0.14.14-alpha", default-features = false }
