[package]
name = "stringz"
version = "0.1.1"
description = "A way to use strings in generic paramters"
authors.workspace = true
license.workspace = true
readme = "README.md"
edition.workspace = true
documentation = "https://docs.rs/stringz"
repository.workspace = true
keywords = ["string", "generic"]
categories = ["data-structures"]

[dependencies]
stringz-macros = { version = "0.1.1", path = "../stringz-macros" }
tuplez = { version = "0.8.2", default-features = false }
