[package]
name = "stringz"
version = "0.3.0"
description = "A way to use strings in generic paramters"
authors.workspace = true
license.workspace = true
readme = "README.md"
edition.workspace = true
documentation = "https://docs.rs/stringz"
repository.workspace = true
keywords = ["string", "generic", "no-std"]
categories = ["data-structures", "no-std", "no-std::no-alloc"]

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
stringz-macros = { version = "0.1.2", path = "../stringz-macros" }
tuplez = { version = ">=0.8.0", default-features = false }
