[package]
name = "stringz"
version = "0.4.0"
description = "A way to use strings in generic paramters"
authors.workspace = true
license.workspace = true
readme = "README.md"
edition.workspace = true
documentation = "https://docs.rs/stringz"
repository.workspace = true
keywords = ["string", "generic", "no-std"]
categories = ["data-structures", "no-std", "no-std::no-alloc"]

[features]
default = ["std"]
std = ["tuplez/std"]
alloc = ["tuplez/alloc"]

[dependencies]
stringz-macros = { version = "0.2.0", path = "../stringz-macros" }
tuplez = { version = ">=0.14.14", default-features = false }
