[package]
name = "structz-macros"
version = "0.1.0"
description = "Procedural macros implementation of structz"
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
documentation = "https://docs.rs/structz"
repository.workspace = true
keywords = ["struct", "anonymous-struct", "named-tuple", "named-arguments"]
categories = [
    "data-structures",
    "rust-patterns",
    "development-tools::procedural-macro-helpers",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
